<resources>
    <string-array name="levels" >
        <item>Level 1 - ✮✰✰</item>
        <item>Level 2 - ✮✰✰</item>
        <item>Level 3 - ✮✬✰</item>
        <item>Level 4 - ✮✬✰</item>
        <item>Level 5 - ✮✮✰</item>
        <item>Level 6 - ✮✮✰</item>
        <item>Level 7 - ✮✮✬</item>
        <item>Level 8 - ✮✮✬</item>
        <item>Level 9 - ✮✮✮</item>
        <item>Level 10 - ✮✮✮</item>
    </string-array>
    <string name="app_name">Nino\'s Project</string>
    <string name="sfx">Sfx:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="music">Music:</string>
    <string name="email">Email or user name:</string>
    <string name="title">Nino\'s Gateway</string>
    <string name="guest">Guest</string>
    <string name="log_in">Log In</string>
    <string name="game_version_0_x_x">Game Version: 0.x.x</string>
    <string name="game_paused">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="suma">Sum</string>
    <string name="options">Options</string>
    <string name="menu">Menu</string>
    <string name="language">Language:</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="you_win">You Win</string>
    <string name="register">Register</string>
    <string name="game_mode">-Game Mode-</string>
    <string name="create_server">Create server</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_name">User Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="single_player">1 - Player</string>
    <string name="multi_players">2 - Players</string>
    <string name="tutorialtext">Tutorial</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="you_lose">You Lose</string>
    <string name="levels">Levels</string>
    <string name="function">The function is not yet implemented</string>
    <string name="zero">00</string>
    <string name="Ingresar_username">You must enter a nickname</string>
    <string name="Ingresar_email">You must enter an e-mail</string>
    <string name="Ingresar_password">You must enter a password</string>
    <string name="retry_password">You must confirm your password</string>
    <string name="check_password">The password does not match, please check that it is well written</string>
    <string name="registered_correctly">You have registered correctly</string>
    <string name="user_exists">There is already a user with this email</string>
    <string name="password_weak">Your password is too weak</string>
    <string name="incorrect_user_password">Your username or password is incorrect</string>
    <string name="username_taken">This username is already taken</string>
    <string name="Validate">Validate</string>
    <string name="validate_completed">Validation completed!</string>
    <string name="pls_val_before">Please, validate before!</string>
    <string name="username_changed">Your username have changed, please validate again!</string>
    <string name="email_changed">Your email have changed, please validate again!</string>
    <string name="password_changed">Your password have changed, please validate again!</string>
    <string name="confirm_password_changed">Your confirmed password have changed, please validate again!</string>
    <string name="validate_success">Validation completed</string>
    <string name="on_music">On</string>
    <string name="log_out_text">Log Out</string>
    <string name="tutorial">Objective: \n
        1.Reach with the player until the position where the poster is and press the button (A). \n
        2. When you arrive, pressing the action button will open a Popup with the puzzle to be solved. \n
        3.Pick the box with the number that solves the puzzle. \n
        4. Go to the exit door and press the button (A). \n
        \t \t 4.1.In case the box with the correct number has been hit, the door will open to pass the level, \n \t \t otherwise a message will be displayed. \n
        5. At all times you can reset the sum of boxes by clicking the reset button. \n
        AND ABOVE ALL, BE CAREFUL WITH THE TRAPS !! \n</string>
    <string name="player"> Player </string>
    <string name="cartell">Poster with the riddle</string>
    <string name="casillas">Boxes to pick up </string>
    <string name="trampas">Traps</string>
    <string name="salida"> Exit </string>
    <string name="Reset">Reset button</string>
    <string name="Accion"> Action button </string>
    <string name="unlock_levels">Unlock the other levels first</string>
    <string name="info_player">This is your player, you have to guide it to the poster where the riddle is.
                 \n\nTo finalize the level you have to solve it using the numbered boxes. Once you have the answer, go
        to the exit door -EXIT-.
                 \n\nIf you got wrong, press the button to reset the score and the boxes.
    </string>
    <string name="info_traps"><![CDATA[Watch out! The danger is imminent, each trap has its own behavior and you will have to find out what it is.
                 \n\nPd. Do not touch the traps… you only have one chance.]]></string>
    <string name="info_obs">They are only decorative elements, admire them if you like.</string>
    <string name="info_obj">Interactive elements will help you leave the room.
        \n\nPoster: Contains the puzzle to be solved.
        \nBox: Stepping on it adds its value to the counter.
        \nPush: Reset the counter to 0.
        \nPlease exit: There can be no room without a door.
        \nIce: It slips a bit but it\'s nice.
    </string>
</resources>
