<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LogInActivity">

    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/fuente1" android:textSize="30sp" app:layout_constraintVertical_bias="0.109"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/emailView" android:layout_weight="1"
                    android:fontFamily="@font/fuente1" android:textSize="24sp" android:layout_gravity="center"
                    android:gravity="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailText" android:layout_weight="1" android:fontFamily="@font/fuente1"
                    android:layout_gravity="center"
                    android:gravity="center" android:layout_marginStart="28dp"
                    android:layout_marginBottom="8dp" android:layout_marginEnd="8dp" android:maxLength="40"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/passwordView" android:layout_weight="1"
                    android:fontFamily="@font/fuente1" android:textSize="24sp" android:layout_gravity="center"
                    android:gravity="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordText" android:layout_weight="1" android:fontFamily="@font/fuente1"
                    android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp" android:layout_gravity="center" android:gravity="center"
                    android:maxLength="10"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <Button
                android:text="@string/register"
                android:layout_width="120dp"
                android:layout_height="65dp" android:id="@+id/register_id" android:layout_weight="1"
                android:textSize="18sp"/>
        <Button
                android:text="@string/guest"
                android:layout_width="120dp"
                android:layout_height="65dp" android:id="@+id/guest_id" android:layout_weight="1"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"/>
        <Button
                android:text="@string/log_in"
                android:layout_width="120dp"
                android:layout_height="65dp" android:id="@+id/logIn_id" android:layout_weight="1"
                android:textSize="18sp" android:layout_gravity="center" android:gravity="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>