<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <Button
            android:id="@+id/button_validate"
            android:text="@string/register"
            android:fontFamily="@font/fuente1"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/button_circle_bundle"
            android:layout_width="125dp"
            android:layout_height="50dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registerView" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.795" app:layout_constraintVertical_bias="0.814"/>
    <Button
            android:id="@+id/button_back"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/back_button"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout4"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4" android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="30sp" android:textStyle="bold"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/button_back"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="258dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            android:id="@+id/linearLayout4">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:text="@string/user_name"
                    android:layout_width="20dp"
                    android:layout_height="50dp" android:id="@+id/userName" android:layout_weight="1"
                    android:layout_gravity="center" android:gravity="" android:textSize="18sp"
                    android:fontFamily="@font/fuente1" android:textStyle="bold" android:paddingTop="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/userNameText" android:layout_weight="1" android:textSize="18sp"
                    android:maxLength="12"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:text="@string/email_address"
                    android:layout_width="20dp"
                    android:layout_height="50dp" android:id="@+id/emailAdress" android:layout_weight="1"
                    android:layout_gravity="center" android:gravity="" android:textSize="18sp"
                    android:fontFamily="@font/fuente1" android:textStyle="bold" android:paddingTop="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailText" android:layout_weight="1" android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:text="@string/password"
                    android:layout_width="20dp"
                    android:layout_height="50dp" android:id="@+id/password" android:layout_weight="1"
                    android:layout_gravity="center" android:gravity="" android:textSize="18sp"
                    android:fontFamily="@font/fuente1" android:textStyle="bold" android:paddingTop="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordText" android:layout_weight="1" android:textSize="18sp"
                    android:maxLength="12"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginEnd="20dp">
            <TextView
                    android:text="@string/confirm_password"
                    android:layout_width="20dp"
                    android:layout_height="50dp" android:id="@+id/confirmPassword" android:layout_weight="1"
                    android:layout_gravity="center" android:textSize="18sp"
                    android:fontFamily="@font/fuente1" android:textStyle="bold" android:paddingTop="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/confirmPasswordText" android:layout_weight="1" android:textSize="18sp"
                    android:maxLength="12"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>