<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="375sp"
                                             android:layout_height="375sp"
                                             android:background="@drawable/popup_background"
                                             android:orientation="vertical"
                                             android:layout_gravity="center_horizontal">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/you_win"
              android:fontFamily="@font/fuente1"
              android:textSize="47sp"
              android:textAllCaps="false"
              android:textStyle="bold"
              android:layout_marginEnd="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_bias="0.136"
              android:id="@+id/textView"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="130dp" app:srcCompat="@drawable/youwin"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="TODO"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:id="@+id/linearLayout3">
        <Button
                android:layout_height="45dp" android:id="@+id/retryButtonYW" android:layout_weight="1"
                android:background="@drawable/retry" android:layout_width="45dp"/>
        <Button
                android:layout_width="136dp"
                android:layout_height="wrap_content" android:id="@+id/levelsbuttonYW"
                android:fontFamily="@font/fuente1" android:background="@drawable/button_circle"
                android:textAlignment="center" android:text="@string/levels"
                android:textSize="27sp" android:layout_weight="1" android:textAllCaps="false"/>
        <Button
                android:layout_width="70dp"
                android:layout_height="wrap_content" android:id="@+id/nextButtonYW" android:layout_weight="1"
                android:background="@drawable/nextbutton"/>
    </LinearLayout>
    <TextView
            android:text="@string/retry"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:id="@+id/retry_textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.995"
            android:fontFamily="@font/fuente1" android:textSize="30sp" android:textColor="@android:color/black"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toStartOf="@+id/imageView"/>
    <TextView
            android:text="@string/next"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:id="@+id/next_textView" android:fontFamily="@font/fuente1"
            android:textSize="30sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:textColor="@android:color/black" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="24dp"/>


</android.support.constraint.ConstraintLayout>