<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.TutorialActivity">

    <Button
            android:layout_width="75dp"
            android:layout_height="37dp" android:id="@+id/button_back_tutorial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/backbutton"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.0"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="308dp" android:id="@+id/scrollView2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="334dp" app:layout_constraintTop_toBottomOf="@+id/button_back_tutorial"
                android:id="@+id/linearLayout5"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="817dp"
                    android:layout_height="42dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="0dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/linearLayoutPlayer" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_back_tutorial" android:layout_marginRight="0dp">
                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/circle"
                        android:id="@+id/imagePlayer"
                        android:layout_weight="0.87" android:contentDescription="TODO"/>
                <TextView
                        android:text="@string/player"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView2" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="739dp"
                    android:layout_height="42dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutPlayer"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"
                    android:id="@+id/linearLayoutCartel">
                <ImageView
                        android:layout_width="119dp"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/cartell_image_1"
                        android:id="@+id/imageCartell" android:layout_weight="1"/>
                <TextView
                        android:text="@string/cartell"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView3" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="763dp"
                    android:layout_height="42dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutCartel"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"
                    android:id="@+id/linearLayoutCasillas">
                <ImageView
                        android:layout_width="61dp"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/casilla_1"
                        android:id="@+id/imageCasilla"
                        android:layout_weight="1"/>
                <TextView
                        android:text="@string/casillas"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView4" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="746dp"
                    android:layout_height="42dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutCasillas"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"
                    android:id="@+id/linearLayoutTramas">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1">
                    <ImageView
                            android:layout_width="2dp"
                            android:layout_height="wrap_content" app:srcCompat="@drawable/bola_pinchos"
                            android:id="@+id/imageCuchilla"
                            android:layout_weight="1"/>
                    <ImageView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" app:srcCompat="@drawable/cuchillas_image_1"
                            android:id="@+id/imageCuchilla2" android:layout_weight="1"/>
                    <ImageView
                            android:layout_width="2dp"
                            android:layout_height="wrap_content" app:srcCompat="@drawable/hielo_rand"
                            android:id="@+id/imageView7"
                            android:layout_weight="1"/>
                </LinearLayout>
                <TextView
                        android:text="@string/trampas"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView5" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="734dp"
                    android:layout_height="42dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutTramas"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="0dp" android:id="@+id/linearLayoutPuertas">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="10dp"
                        android:layout_height="match_parent" android:layout_weight="1">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" app:srcCompat="@drawable/puerta1"
                            android:id="@+id/imageExitX"
                            android:layout_weight="1"/>
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" app:srcCompat="@drawable/puerta2"
                            android:id="@+id/imageExitY"
                            android:layout_weight="1"/>
                </LinearLayout>
                <TextView
                        android:text="@string/salida"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView6" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="734dp"
                    android:layout_height="42dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutPuertas"
                    android:id="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="0dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent" app:srcCompat="@drawable/reset_button"
                            android:id="@+id/imageView2"
                            android:layout_weight="1"/>
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent" app:srcCompat="@drawable/reset_button_pulsat"
                            android:id="@+id/imageView3" android:layout_weight="1"/>
                </LinearLayout>
                <TextView
                        android:text="@string/Reset"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView14" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="729dp"
                    android:layout_height="42dp"
                    android:id="@+id/linearLayoutAccionButton"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            >
                <Button
                        android:text="A (Por cambiar)"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content" android:id="@+id/button" android:layout_weight="1"
                        android:enabled="false" android:layout_marginStart="0dp"/>
                <TextView
                        android:text="@string/Accion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/textView9" android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                    android:layout_width="699dp"
                    android:layout_height="172dp"
                    android:id="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutAccionButton" android:text="@string/tutorial"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginEnd="100dp" android:layout_marginStart="0dp"
                    android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>